Dibuat menggunakan Colaboratory

--- a/Week6.ipynb
+++ b/Week6.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMsvJ0nHabq3H89ZlTH0REr",
+      "authorship_tag": "ABX9TyMu19MeG6uQJzYp6vheXm6G",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -25,6 +25,17 @@
       "source": [
         "<a href=\"https://colab.research.google.com/github/AgungA1/Agung-Malik-Qindy_2141720114_PCVK/blob/main/Week6.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Nama: Agung Malik Al Qindy\n",
+        "\n",
+        "NIM/No Absen: 2141720114/03"
+      ],
+      "metadata": {
+        "id": "XA-DLwvqJwXc"
+      }
     },
     {
       "cell_type": "markdown",
