--- a/Week6.ipynb
+++ b/Week6.ipynb
@@ -4,7 +4,6 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMu19MeG6uQJzYp6vheXm6G",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -29,9 +28,13 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Nama: Agung Malik Al Qindy\n",
+        "**Kelompok 5:**\n",
         "\n",
-        "NIM/No Absen: 2141720114/03"
+        "* Agung Malik Al Qindy / 2141720114\n",
+        "\n",
+        "* Billie Faiqul Izzat / 214172020051\n",
+        "\n",
+        "* Shovinas Hanun / 2141720252"
       ],
       "metadata": {
         "id": "XA-DLwvqJwXc"
@@ -48,7 +51,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -85,7 +88,7 @@
       "metadata": {
         "id": "vcAj4CT0Ui1D"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -152,7 +155,7 @@
         "id": "fB_q7lx0U-g8",
         "outputId": "799910d0-414c-4e11-90fd-9e5a4639077c"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -224,7 +227,7 @@
         "id": "pOSqV3SYYuRf",
         "outputId": "96f309a3-d17d-469c-dcdd-39ed4b862f56"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -295,7 +298,7 @@
         "id": "lTPn2XASZhnW",
         "outputId": "eaf7f829-1257-463e-c1a8-dc1cea72f81d"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -394,7 +397,7 @@
         "id": "-538y9oyagk6",
         "outputId": "1b1bb09d-82d4-474e-de94-275e969fdf5e"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -442,7 +445,7 @@
         "id": "9MxK4vlnapOA",
         "outputId": "62bab127-5e8d-462a-e831-11f93aa3cad1"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -492,7 +495,7 @@
         "id": "kdYK45YVa2P2",
         "outputId": "c5aa3a9d-e0c0-43f5-9b19-251419f8b2da"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -574,7 +577,7 @@
         "id": "V4lULOq_bOBK",
         "outputId": "4106dd7f-acf0-4e63-f13f-639d8932d035"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -658,7 +661,7 @@
         "id": "uSYf8nfAbjiD",
         "outputId": "3059338e-957c-4f2d-c168-e9b711f625d4"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -702,7 +705,7 @@
         "id": "qiX_Jv3Ub9k1",
         "outputId": "eb111cee-41bd-4da9-b25c-52318d49a83b"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -746,7 +749,7 @@
         "id": "GWM9E3N4c2IB",
         "outputId": "d43bde75-8988-45b8-abd0-f6d4fb78e096"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -774,7 +777,7 @@
         "id": "Ib3AUB3fhNGb",
         "outputId": "54d7bf49-fc51-4249-a3db-de3a8efb3673"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -836,7 +839,7 @@
         "id": "Mft9VotshrLB",
         "outputId": "7805af8a-b477-4fad-ba90-65259ed0de74"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
