Dibuat menggunakan Colaboratory

--- a/Kuis2.ipynb
+++ b/Kuis2.ipynb
@@ -13,7 +13,8 @@
     },
     "language_info": {
       "name": "python"
-    }
+    },
+    "accelerator": "GPU"
   },
   "cells": [
     {
@@ -27,14 +28,29 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "**Kelompok 5:**\n",
+        "\n",
+        "* Agung Malik Al Qindy / 2141720114\n",
+        "\n",
+        "* Billie Faiqul Izzat / 214172020051\n",
+        "\n",
+        "* Shovinas Hanun / 2141720252"
+      ],
+      "metadata": {
+        "id": "jFUbo3Ks6PaU"
+      }
+    },
+    {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 38,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "dXtM9IC0jJPf",
-        "outputId": "fc4452d5-8771-49b9-fe27-f3ca77e50ba9"
+        "outputId": "6c13b9e9-7623-4b19-c3bc-2854819acf59"
       },
       "outputs": [
         {
@@ -61,13 +77,13 @@
       "metadata": {
         "id": "BKn_zyoLje8E"
       },
-      "execution_count": 350,
+      "execution_count": 39,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "img = cv2.imread('/content/drive/MyDrive/Colab Notebooks/dataset-kuis2/ktp3.jpg')\n",
+        "img = cv2.imread('/content/drive/MyDrive/Colab Notebooks/datasetktpkuis/ktpAgung.jpg')\n",
         "img_original = np.copy(img)\n",
         "\n",
         "# Apply Gaussian Blur\n",
@@ -93,20 +109,19 @@
       "metadata": {
         "id": "6Pmf1Y0PujWD"
       },
-      "execution_count": 352,
+      "execution_count": 40,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
         "# Lokalisasi (Canny)\n",
-        "edged = cv2.Canny(otsu_thresholded, 50, 150)\n",
-        "\n"
+        "edged = cv2.Canny(otsu_thresholded, 50, 150)"
       ],
       "metadata": {
         "id": "FCj9WwxBkNZR"
       },
-      "execution_count": 353,
+      "execution_count": 41,
       "outputs": []
     },
     {
@@ -153,7 +168,7 @@
       "metadata": {
         "id": "nX-Bib2fvRAu"
       },
-      "execution_count": 354,
+      "execution_count": 42,
       "outputs": []
     },
     {
@@ -184,12 +199,12 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 410
+          "height": 565
         },
         "id": "aw4GDX11v_4M",
-        "outputId": "989f1261-b96c-4e70-b206-a03a21aeb665"
+        "outputId": "b04ea8e2-06b4-4c16-8057-5f76230513a8"
       },
-      "execution_count": 355,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -243,9 +258,9 @@
           "height": 229
         },
         "id": "Nti7wNmzIJv2",
-        "outputId": "583c1450-957f-45ff-ec4b-e05ad5ee699f"
+        "outputId": "00404550-5a82-47a8-d4e2-04e731b8823d"
       },
-      "execution_count": 356,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -263,7 +278,7 @@
       "cell_type": "code",
       "source": [
         "# Tahap Deteksi\n",
-        "face_cascade = cv2.CascadeClassifier('/content/drive/MyDrive/Colab Notebooks/Computer Vision/Pertemuan 12/Face Detection/haarcascade_frontalface_alt.xml')\n",
+        "face_cascade = cv2.CascadeClassifier('/content/drive/MyDrive/Colab Notebooks/datasetktpkuis/haarcascade_frontalface_alt.xml')\n",
         "detect = np.copy(ktp_filtered)\n",
         "gray = cv2.cvtColor(detect, cv2.COLOR_BGR2GRAY)\n",
         "\n",
@@ -280,9 +295,9 @@
           "height": 229
         },
         "id": "ShgLVY0dteE3",
-        "outputId": "32c3cd21-b5df-490c-ef52-5e9222754dd4"
+        "outputId": "a9d8020a-4b71-4d6f-d2f5-cd0617a4a107"
       },
-      "execution_count": 357,
+      "execution_count": 43,
       "outputs": [
         {
           "output_type": "display_data",
